--- a/sucursales.html
+++ b/sucursales.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peluka</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -152,9 +152,6 @@
                     <a href="#" class="btn-form" data-bs-toggle="modal" data-bs-target="#modalmapa">Ver todas en el
                         mapa</a>
                 </div>
-
-
-                <!-- Modal -->
                 <div class="modal fade  w-80" id="modalmapa" tabindex="-1" aria-labelledby="modalmapaLabel"
                     aria-hidden="true">
                     <div class="modal-dialog  modal-lg modal-fullscreen-lg-down">
@@ -180,6 +177,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
         </section>
         <footer class="footer">
             <div class="footer-container">
